@@ -3,15 +3,25 @@
 this repository contains the full copyright notices and license terms. -->
 <tryton>
     <data>
-        <record model="ir.ui.view" id="product_view_form">
-            <field name="model">offered.product</field>
-            <field name="inherit" ref="offered.product_view_form"/>
-            <field name="name">product_form</field>
+        <record model="ir.action.act_window" id="act_option_agents_relate_form">
+            <field name="name">Agents</field>
+            <field name="res_model">commission.agent</field>
+            <field name="domain" eval="[('plan.lines.options', 'in', [Eval('active_id')])]" pyson="1"/>
         </record>
-        <record model="ir.ui.view" id="option_description_view_form">
-            <field name="model">offered.option.description</field>
-            <field name="inherit" ref="offered.coverage_view_form"/>
-            <field name="name">option_description_form</field>
+        <record model="ir.action.keyword" id="act_option_agents_relate_keyword">
+            <field name="keyword">form_relate</field>
+            <field name="model">offered.option.description,-1</field>
+            <field name="action" ref="act_option_agents_relate_form"/>
+        </record>
+        <record model="ir.action.act_window" id="act_product_agents_relate_form">
+            <field name="name">Agents</field>
+            <field name="res_model">commission.agent</field>
+            <field name="domain" eval="[('commissioned_products', 'in', [Eval('active_id')])]" pyson="1"/>
+        </record>
+        <record model="ir.action.keyword" id="act_product_agents_relate_keyword">
+            <field name="keyword">form_relate</field>
+            <field name="model">offered.product,-1</field>
+            <field name="action" ref="act_product_agents_relate_form"/>
         </record>
     </data>
 </tryton>
