@@ -1,10 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is part of Coog. The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
-<data>
-    <xpath expr="/form/notebook/page[@id='admin']" position="before">
-        <page id="commission" string="Commission">
-            <field name="agents" colspan="4"/>
-        </page>
-    </xpath>
-</data>
