@@ -1,3 +1,4 @@
+* BUG#7914 Suppression des "Protocoles de commissionnement" de la vue forme produit / garantie et ajout d'une relation à la place
 * BUG#7875 Utilisation de initial_start_date au lieu de start_date dans l'algorithme de calcul des dates de recalcul
 * FEA#0000 Ajout de l'élement couvert dans la vue liste des commissions (utile quand plusieurs assurés souscrivent la même option pour différencier les commissions)
 * OTH#0000 Mise à jour de la méthode on_change_with_agent après la correction 7755
